--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +14,9 @@
     "helmet": "^4.6.0",
     "mongoose": "^6.0.12",
     "mysql": "^2.18.1",
-    "path": "^0.12.7"
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.15",
+    "path": "^0.12.7",
+    "sequelize": "^6.9.0"
   }
 }
