--- a/backend/package.json
+++ b/backend/package.json
@@ -9,14 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
-    "mongoose": "^6.0.12",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
-    "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
+    "password-validator": "^5.2.1",
     "path": "^0.12.7",
-    "sequelize": "^6.9.0"
+    "sequelize": "^6.8.0"
   }
 }
