--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,11 @@
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
     "password-validator": "^5.2.1",
     "path": "^0.12.7",
-    "sequelize": "^6.8.0"
+    "sequelize": "^6.6.5",
+    "sequelize-cli": "^6.3.0"
   }
 }
