--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
@@ -20,7 +21,8 @@
     "nodemon": "^2.0.15",
     "password-validator": "^5.2.1",
     "path": "^0.12.7",
-    "sequelize": "^6.6.5",
+    "sequelize": "^6.11.0",
+    "sequelize-auto": "^0.8.8",
     "sequelize-cli": "^6.3.0"
   }
 }
