--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "fs": "0.0.1-security",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
